# notiguy

./: .gitignore  README.md  rest-client.ps1
backend/: Cargo.toml
backend/src/: database.rs  db.rs  main.rs  note.rs
backend/src/handler/: note.rs
backend/src/model/: note.rs
frontend/: package-lock.json
frontend/src/: App.jsx
